--- a/project1/project1.csproj
+++ b/project1/project1.csproj
@@ -9,6 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="TableExcel\**" />
+    <EmbeddedResource Remove="TableExcel\**" />
+    <None Remove="TableExcel\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Microsoft.Office.Excel" Version="14.0.4760.1000" />
     <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1001" />
@@ -33,7 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="TableExcel\" />
+    <Folder Include="TableJson\" />
   </ItemGroup>
 
 </Project>
